	PR c++/11409 	* class.c (resolve_address_of_overloaded_function): When building 	list of matching non-template function decls, ignore anticipated 	declarations of undeclared or shadowed GCC builtins.

* g++.dg/overload/builtin3.C: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@71139 138bc75d-0d04-0410-961f-82ee72b054a4